# s3toStorj

./: .gitignore  Dockerfile  README.md  find.py  listsonly.py  migration.py  pyproject.toml  requirements.txt  s3tostorj.py  storjtostorj.py  storjtostorj_list.py  test.py
.gitea/workflows/: main.yml
